# strata

./: .gitignore  AGENTS.md  README.md  agents.md  config-example.toml
crates/: Cargo.toml  clippy.toml
crates/nokturn-core/: Cargo.toml
crates/nokturn-core/src/: ir.rs  lib.rs  resolver.rs
crates/nokturn-gen/: Cargo.toml
crates/nokturn-gen/src/: lib.rs
open-api-specs/cloudflare/: config.toml
open-api-specs/digitalocean/: config.toml
scripts/: cloudflare_validation.sh  generate.sh
skygen/: Cargo.toml  README.md  config.toml
skygen/assets/templates/: aliases.rs.tera  lib.rs.tera  mod.rs.tera  model.rs.tera  models.rs.tera  operation.rs.tera  operations.rs.tera
skygen/src/: lib.rs  ollama.rs
skygen/src/generator/: mod.rs  model.rs  operation.rs  operation_tests.rs  project.rs
skygen/src/resolver/: mod.rs  resolve.rs
